# MRR-Fantasy

./: .dockerignore  .gitignore  PREMIER_LEAGUE_FANTASY_RULES.md  README.md  fly.toml
backend/: .env.example  Cargo.toml  Dockerfile
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/auth/: admin.rs  handler.rs  jwt.rs  middleware.rs  mod.rs
backend/src/handlers/: accounting.rs  admin.rs  chips.rs  leagues.rs  mod.rs  players.rs  points.rs  randomizer.rs  teams.rs
backend/src/models/: league.rs  mod.rs  player.rs  points.rs  team.rs  user.rs
backend/src/services/: mod.rs  points_engine.rs  randomizer.rs  seed.rs
deploy/raspberry-pi/: README.md  backend.env.example  frontend.env.example  mrrfantasy-backend.service  mrrfantasy-frontend.service  mrrfantasy.nginx.conf
deploy/vercel-fly-supabase/: README.md
frontend/: .vade-report  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: formation.tsx  nav.tsx  player-avatar.tsx  (+2 more)
migrations/: 001_create_users.sql  002_create_players.sql  003_create_teams.sql  004_create_leagues.sql  005_create_points.sql  006_add_secondary_position.sql  007_add_top_player.sql  008_add_bench_players.sql  009_add_assigned_position.sql  010_add_full_name.sql  011_add_captain.sql  012_add_match_stats_and_admin.sql  013_add_chips.sql  014_create_transfers.sql  015_transfer_hits_and_lock_override.sql  016_team_gameweek_points.sql  017_team_gameweek_lineup_snapshots.sql  018_gameweek_price_adjustments.sql  019_team_budget_limit.sql  020_create_futsal_accounting.sql
(+13 files in other folders)
